differenceChecking/production/frontend/https-redirect-middleware.yaml
---
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: fsm
spec:
  redirectScheme:
    scheme: https
    permanent: true
