differenceChecking/production/frontend/strippath-middleware.yaml
---
# Replace path with regex
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-path
  namespace: fsm
spec:
  replacePathRegex:
    regex: "^/fe/([^/]+)(?:/index\\.html)?(?:/)?(.*)"
    replacement: "/$2"
