differenceChecking/production/frontend/frontend-teller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bahl-frontend-teller
  name: bahl-frontend-teller
  namespace: fsm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bahl-frontend-teller
  template:
    metadata:
      labels:
        app: bahl-frontend-teller
    spec:
      #knodeSelector:
        #kubernetes.io/role: FE
      containers:
        - image: harbor.teresol.com/frontend/fe:1.42.1.integration
          imagePullPolicy: Always
          name: bahl-frontend-teller
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bahl-frontend-teller
  namespace: fsm
  name: bahl-frontend-teller
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
      nodePort: 30001
  selector:
    app: bahl-frontend-teller
  type: NodePort
