differenceChecking/production/frontend/frontend-testing.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bahl-frontend-testing
  name: bahl-frontend-testing
  namespace: fsm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bahl-frontend-testing
  template:
    metadata:
      labels:
        app: bahl-frontend-testing
    spec:
      containers:
        - image: harbor.teresol.com/frontend/fe:1.37.9.test.integration
          imagePullPolicy: Always
          name: bahl-frontend-testing
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bahl-frontend-testing
  namespace: fsm
  name: bahl-frontend-testing
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: bahl-frontend-testing
  type: ClusterIP
