differenceChecking/production/frontend/bahl-backend-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bahl-backend-server
  name: bahl-backend-server
  namespace: fsm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bahl-backend-server
  strategy: {}
  template:
    metadata:
      labels:
        app: bahl-backend-server
    spec:
      #knodeSelector:
        #kubernetes.io/role: FSM-WORKER
      hostAliases:
      - ip: "10.90.95.52"
        hostnames:
        - "core.teresol-bahl.com"
      - ip: "10.90.95.53"
        hostnames:
        - "services.teresol-bahl.com"
      containers:
        - envFrom:
            - configMapRef:
                name: fsm-configmap

          image: harbor.teresol.com/bahl-backend-server/bahl-backend-server:1.0.4
          imagePullPolicy: Always
          name: bahl-backend-server
          ports:
            - containerPort: 3500
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bahl-backend-server
  name: bahl-backend-server
  namespace: fsm
spec:
  ports:
    - name: "3500"
      port: 3500
      targetPort: 3500
  selector:
    app: bahl-backend-server
  type: ClusterIP


########################################
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-bahl-backend-server
  namespace: fsm
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`services.teresol-bahl.com`) && PathPrefix(`/bahlBackendServer`)
      kind: Rule
      services:
        - kind: Service
          name: bahl-backend-server
          namespace: fsm
          port: 3500
  tls:
    secretName: bahl-tls-secret
